// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`symulacja: test złoty (F9-T2) > stan po exploration ticków trybu undefined jest stały 1`] = `
{
  "activeQuests": [
    {
      "id": "quest_solar_power",
      "progress": {
        "obj_solar_1": 0,
      },
      "status": "active",
    },
    {
      "id": "quest_ice_water",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_o2_generator",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_battery_storage",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_greenhouse_food",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_deep_mining",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_research_center",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_defense_grid",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_alien_survival",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_green_mars",
      "progress": {},
      "status": "locked",
    },
  ],
  "alienState": {
    "groundUnits": [],
    "nextGroundSpawnIn": 80,
    "nextShipSpawnIn": 120,
    "ships": [],
    "wave": 0,
  },
  "aliensDefeated": 0,
  "alive": true,
  "analyticsSnapshots": [
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 3,
        "energy": 8,
        "minerals": 4,
        "o2": 5,
        "water": 6,
      },
      "sol": 1,
      "terraforming": {
        "o2": 0,
        "progress": 0,
        "temp": -60,
        "waterLevel": -0.45,
      },
      "tick": 0,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 2.5,
        "energy": 6.8,
        "minerals": 4,
        "o2": 5.6,
        "water": 4.8,
      },
      "sol": 1,
      "terraforming": {
        "o2": 0.6,
        "progress": 0.9,
        "temp": -59.3,
        "waterLevel": -0.45,
      },
      "tick": 10,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 2,
        "energy": 5.7,
        "minerals": 4,
        "o2": 6.3,
        "water": 3.7,
      },
      "sol": 1,
      "terraforming": {
        "o2": 1.3,
        "progress": 0.8,
        "temp": -59.4,
        "waterLevel": -0.47,
      },
      "tick": 20,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 1.5,
        "energy": 4.5,
        "minerals": 4,
        "o2": 6.8,
        "water": 2.4,
      },
      "sol": 1,
      "terraforming": {
        "o2": 1.8,
        "progress": 0.6,
        "temp": -59.6,
        "waterLevel": -0.48,
      },
      "tick": 30,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0.8,
        "energy": 3.4,
        "minerals": 4,
        "o2": 7.2,
        "water": 1,
      },
      "sol": 1,
      "terraforming": {
        "o2": 2.2,
        "progress": 0.3,
        "temp": -59.7,
        "waterLevel": -0.49,
      },
      "tick": 40,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0.1,
        "energy": 2.3,
        "minerals": 4,
        "o2": 7.4,
        "water": 0,
      },
      "sol": 1,
      "terraforming": {
        "o2": 2.4,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 50,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 1.3,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 60,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0.3,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 70,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 80,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 90,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 100,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 110,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 120,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 130,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 140,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 150,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 160,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 170,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 180,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 190,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 200,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 210,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 220,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 230,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 240,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 250,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 260,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 270,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 280,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 290,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 6,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 300,
    },
  ],
  "capacity": {
    "biomass": 20,
    "minerals": 200,
    "power": 20,
    "water": 20,
  },
  "emergencyLifeSupport": {
    "active": false,
    "secondsRemaining": 60,
  },
  "lastDelta": {
    "biomass": 0,
    "minerals": 0.09999999999999432,
    "o2": 0,
    "power": 0,
    "water": 0,
  },
  "morale": {
    "factors": {
      "foodSatisfaction": 0,
      "housingSatisfaction": 100,
      "o2Satisfaction": 100,
      "waterSatisfaction": 0,
    },
    "productivityMultiplier": 1,
    "value": 55,
  },
  "o2Accumulated": 2.494999999999993,
  "placed": [
    {
      "condition": 100,
      "definitionId": "hab",
      "id": "colony-center-hab",
      "level": 1,
    },
  ],
  "population": {
    "capacity": 10,
    "roles": {
      "engineer": 1,
      "farmer": 1,
      "miner": 1,
      "scientist": 1,
      "unassigned": 6,
    },
    "total": 10,
  },
  "researchPoints": 89.9999999999995,
  "resourceNodes": [
    {
      "amount": 1200,
      "id": "rg0",
      "model": "ice_01",
      "pos": [
        -6,
        -14,
      ],
      "richness": "med",
      "type": "ice",
    },
    {
      "amount": 1100,
      "id": "rg1",
      "model": "energy_01",
      "pos": [
        12,
        -9,
      ],
      "richness": "med",
      "type": "energy",
    },
    {
      "amount": 900,
      "id": "rg2",
      "model": "mineral_pile_01",
      "pos": [
        -5,
        19,
      ],
      "richness": "low",
      "type": "minerals",
    },
    {
      "amount": 1700,
      "id": "rg3",
      "model": "mineral_pile_01",
      "pos": [
        2,
        -11,
      ],
      "richness": "med",
      "type": "minerals",
    },
    {
      "amount": 3100,
      "id": "rg4",
      "model": "energy_01",
      "pos": [
        1,
        -7,
      ],
      "richness": "high",
      "type": "energy",
    },
    {
      "amount": 1300,
      "id": "rg5",
      "model": "mineral_pile_01",
      "pos": [
        -3,
        5,
      ],
      "richness": "med",
      "type": "minerals",
    },
    {
      "amount": 1400,
      "id": "rg6",
      "model": "organics_01",
      "pos": [
        -9,
        13,
      ],
      "richness": "med",
      "type": "organics",
    },
    {
      "amount": 1600,
      "id": "rg7",
      "model": "mineral_pile_01",
      "pos": [
        8,
        -13,
      ],
      "richness": "med",
      "type": "minerals",
    },
  ],
  "resources": {
    "biomass": 0,
    "minerals": 90.68999999999856,
    "o2": 7.494999999999993,
    "power": 0,
    "water": 0,
  },
  "sol": 6,
  "terraforming": 0.15593749999999956,
  "tick": 300,
  "units": [
    {
      "currentHealth": 250,
      "definitionId": "rover_combat",
      "heading": 0,
      "id": "initial-combat-rover-1",
      "position": {
        "x": 25.9,
        "y": 1.2,
        "z": 0.9607695154586728,
      },
      "status": "idle",
    },
    {
      "currentHealth": 120,
      "definitionId": "drone_repair",
      "heading": 0,
      "id": "initial-repair-drone-1",
      "position": {
        "x": 20.9,
        "y": 2.7,
        "z": 0.9607695154586728,
      },
      "status": "idle",
    },
    {
      "currentHealth": 100,
      "definitionId": "rover",
      "heading": 0,
      "id": "initial-logistics-rover-1",
      "position": {
        "x": 25.4,
        "y": 1.2,
        "z": -3.539230484541327,
      },
      "status": "idle",
    },
  ],
  "waterLevel": -0.4991579375,
  "weather": {
    "cooldownTicks": 30,
    "intensity": 0,
    "remainingTicks": 0,
    "type": "clear",
  },
  "won": false,
}
`;

exports[`symulacja: test złoty (F9-T2) > stan po survival ticków trybu undefined jest stały 1`] = `
{
  "activeQuests": [
    {
      "id": "quest_solar_power",
      "progress": {
        "obj_solar_1": 0,
      },
      "status": "active",
    },
    {
      "id": "quest_ice_water",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_o2_generator",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_battery_storage",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_greenhouse_food",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_deep_mining",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_research_center",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_defense_grid",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_alien_survival",
      "progress": {},
      "status": "locked",
    },
    {
      "id": "quest_green_mars",
      "progress": {},
      "status": "locked",
    },
  ],
  "alienState": {
    "groundUnits": [],
    "nextGroundSpawnIn": 20,
    "nextShipSpawnIn": 60,
    "ships": [],
    "wave": 2,
  },
  "aliensDefeated": 3,
  "alive": true,
  "analyticsSnapshots": [
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 3,
        "energy": 8,
        "minerals": 4,
        "o2": 5,
        "water": 6,
      },
      "sol": 1,
      "terraforming": {
        "o2": 0,
        "progress": 0,
        "temp": -60,
        "waterLevel": -0.45,
      },
      "tick": 0,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 2.5,
        "energy": 6.8,
        "minerals": 4,
        "o2": 5.6,
        "water": 4.8,
      },
      "sol": 1,
      "terraforming": {
        "o2": 0.6,
        "progress": 0.9,
        "temp": -59.3,
        "waterLevel": -0.45,
      },
      "tick": 10,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 2,
        "energy": 5.7,
        "minerals": 4,
        "o2": 6.3,
        "water": 3.7,
      },
      "sol": 1,
      "terraforming": {
        "o2": 1.3,
        "progress": 0.8,
        "temp": -59.4,
        "waterLevel": -0.47,
      },
      "tick": 20,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 1.5,
        "energy": 4.5,
        "minerals": 4,
        "o2": 6.8,
        "water": 2.4,
      },
      "sol": 1,
      "terraforming": {
        "o2": 1.8,
        "progress": 0.6,
        "temp": -59.6,
        "waterLevel": -0.48,
      },
      "tick": 30,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0.8,
        "energy": 3.4,
        "minerals": 4,
        "o2": 7.2,
        "water": 1,
      },
      "sol": 1,
      "terraforming": {
        "o2": 2.2,
        "progress": 0.3,
        "temp": -59.7,
        "waterLevel": -0.49,
      },
      "tick": 40,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0.1,
        "energy": 2.3,
        "minerals": 4,
        "o2": 7.4,
        "water": 0,
      },
      "sol": 1,
      "terraforming": {
        "o2": 2.4,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 50,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 1.3,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 60,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0.3,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 70,
    },
    {
      "aliensDefeated": 0,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 80,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 90,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 100,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 2,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 110,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 120,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 130,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 140,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 150,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 160,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 3,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 170,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 180,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 190,
    },
    {
      "aliensDefeated": 1,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 200,
    },
    {
      "aliensDefeated": 2,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 210,
    },
    {
      "aliensDefeated": 2,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 220,
    },
    {
      "aliensDefeated": 2,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 4,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 230,
    },
    {
      "aliensDefeated": 2,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 240,
    },
    {
      "aliensDefeated": 2,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 250,
    },
    {
      "aliensDefeated": 2,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 260,
    },
    {
      "aliensDefeated": 3,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 270,
    },
    {
      "aliensDefeated": 3,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 7.5,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 280,
    },
    {
      "aliensDefeated": 3,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 6.4,
        "water": 0,
      },
      "sol": 5,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 290,
    },
    {
      "aliensDefeated": 3,
      "buildingsCount": 1,
      "resources": {
        "biomass": 0,
        "energy": 0,
        "minerals": 4,
        "o2": 4.9,
        "water": 0,
      },
      "sol": 6,
      "terraforming": {
        "o2": 2.5,
        "progress": 0.2,
        "temp": -59.9,
        "waterLevel": -0.5,
      },
      "tick": 300,
    },
  ],
  "capacity": {
    "biomass": 20,
    "minerals": 200,
    "power": 20,
    "water": 20,
  },
  "emergencyLifeSupport": {
    "active": false,
    "secondsRemaining": 60,
  },
  "lastDelta": {
    "biomass": 0,
    "minerals": 0,
    "o2": -0.15000000000000036,
    "power": 0,
    "water": 0,
  },
  "morale": {
    "factors": {
      "foodSatisfaction": 0,
      "housingSatisfaction": 100,
      "o2Satisfaction": 100,
      "waterSatisfaction": 0,
    },
    "productivityMultiplier": 1,
    "value": 55,
  },
  "o2Accumulated": 2.494999999999993,
  "placed": [
    {
      "condition": 0,
      "definitionId": "hab",
      "id": "colony-center-hab",
      "level": 1,
    },
  ],
  "population": {
    "capacity": 10,
    "roles": {
      "engineer": 1,
      "farmer": 1,
      "miner": 1,
      "scientist": 1,
      "unassigned": 6,
    },
    "total": 10,
  },
  "researchPoints": 74.60000000000014,
  "resourceNodes": [
    {
      "amount": 1200,
      "id": "rg0",
      "model": "ice_01",
      "pos": [
        -6,
        -14,
      ],
      "richness": "med",
      "type": "ice",
    },
    {
      "amount": 1100,
      "id": "rg1",
      "model": "energy_01",
      "pos": [
        12,
        -9,
      ],
      "richness": "med",
      "type": "energy",
    },
    {
      "amount": 900,
      "id": "rg2",
      "model": "mineral_pile_01",
      "pos": [
        -5,
        19,
      ],
      "richness": "low",
      "type": "minerals",
    },
    {
      "amount": 1700,
      "id": "rg3",
      "model": "mineral_pile_01",
      "pos": [
        2,
        -11,
      ],
      "richness": "med",
      "type": "minerals",
    },
    {
      "amount": 3100,
      "id": "rg4",
      "model": "energy_01",
      "pos": [
        1,
        -7,
      ],
      "richness": "high",
      "type": "energy",
    },
    {
      "amount": 1300,
      "id": "rg5",
      "model": "mineral_pile_01",
      "pos": [
        -3,
        5,
      ],
      "richness": "med",
      "type": "minerals",
    },
    {
      "amount": 1400,
      "id": "rg6",
      "model": "organics_01",
      "pos": [
        -9,
        13,
      ],
      "richness": "med",
      "type": "organics",
    },
    {
      "amount": 1600,
      "id": "rg7",
      "model": "mineral_pile_01",
      "pos": [
        8,
        -13,
      ],
      "richness": "med",
      "type": "minerals",
    },
  ],
  "resources": {
    "biomass": 0,
    "minerals": 88.98999999999866,
    "o2": 4.944999999999987,
    "power": 0,
    "water": 0,
  },
  "sol": 6,
  "terraforming": 0.15593749999999956,
  "tick": 300,
  "units": [
    {
      "attackCooldown": 0,
      "currentHealth": 250,
      "currentPathIndex": undefined,
      "definitionId": "rover_combat",
      "heading": 0,
      "id": "initial-combat-rover-1",
      "path": undefined,
      "position": {
        "x": 21.599999999999998,
        "y": 1.2,
        "z": 2.0784609690826543,
      },
      "status": "idle",
      "targetEntityId": undefined,
      "targetPosition": undefined,
      "targetType": "alien",
    },
    {
      "currentHealth": 120,
      "definitionId": "drone_repair",
      "heading": 0,
      "id": "initial-repair-drone-1",
      "position": {
        "x": 20.9,
        "y": 2.7,
        "z": 0.9607695154586728,
      },
      "status": "idle",
    },
    {
      "currentHealth": 100,
      "definitionId": "rover",
      "heading": 0,
      "id": "initial-logistics-rover-1",
      "position": {
        "x": 25.4,
        "y": 1.2,
        "z": -3.539230484541327,
      },
      "status": "idle",
    },
  ],
  "waterLevel": -0.4991579375,
  "weather": {
    "cooldownTicks": 26,
    "intensity": 0,
    "remainingTicks": 0,
    "type": "clear",
  },
  "won": false,
}
`;
